<resources>
    <string name="facebook_app_id">2408304456066990</string>
    <string name="fb_login_protocol_scheme">fb2408304456066990</string>
    <string name="app_name">Drewel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="skip">Skip</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="default_notification_channel_id">32000</string>
    <string name="default_notification_channel_name">Default Notification Channel</string>
    <string name="default_notification_channel_description">It will deliver all notification above Android Oreo. It should be enabled to receive notification.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">Or</string>
    <string name="login_with_fb">Continue with Facebook</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search">Search</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="enter_first_name">Please enter your first name</string>
    <string name="please_enter_lastname">Please enter last name.</string>
    <string name="enter_phone_number">Please enter your phone number</string>
    <string name="valid_phone_number">Please enter valid phone number</string>
    <string name="enter_email_address">Please enter email address</string>
    <string name="enter_valid_email_address">Please enter valid email address</string>
    <string name="enter_loyalty_point">Please enter loyalty balance</string>
    <string name="password_same">Old password and new password cannot be same.</string>
    <string name="empty_password">Enter password</string>
    <string name="short_password">Password must be 6 character long</string>
    <string name="invalid_password">Password must contain atleast one alphabet and numeric character</string>
    <string name="empty_confirm_password">Confirm password</string>
    <string name="dont_match_password">Passwords don\'t match</string>
    <string name="otp_verifcation">OTP Verification</string>
    <string name="_dash">-</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="OTP">OTP</string>
    <string name="otp_description">(Enter the OTP below to verify your Mobile number)</string>
    <string name="incomplete_otp">Please Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_in">Resend in</string>
    <string name="sec">Secs</string>
    <string name="error_network_connection">No internet connection.</string>
    <string name="add_button_name">Ad Button</string>
    <string name="babybel">Babybel</string>
    <string name="all_products">All Product</string>
    <string name="home">Home</string>
    <string name="myorder">My Orders</string>
    <string name="request">Add</string>
    <string name="requests">Add</string>
    <string name="more">More</string>
    <string name="kraft_singles">Kraft Singles</string>
    <string name="discount_off">(40% off )</string>
    <string name="quantity">Quantity</string>
    <string name="search_product">Search Products</string>
    <string name="all_products_from_this_store">All products from this store</string>
    <string name="omr">OMR</string>
    <string name="products_details">Products Details</string>
    <string name="add_to_chart">Add to Cart</string>
    <string name="product_details">Kerry Lnw Lne 10 cheesy slices f ff fg</string>
    <string name="cheese">Cheese</string>
    <string name="dairy_and_egg">Dairy and Eggs</string>
    <string name="weight">Weight</string>
    <string name="brand">Brand</string>
    <string name="product_content_dummy">Lorem ipsum dolor sit amet, vide erant simul cu duo, mea iudico quaeque eu. His nihil vocibus ut, ei qui albucius platonem suscipiantur, no vim enim aeterno indoctum. Id his duis corpora elaboraret, ei exerci regione suavitate eum. Et est vitae graeci efficiendi, cu quo mazim graeco. Ea cum vidit dicant offendit, pri ei dico rebum error. Mei quem stet te.</string>
    <string name="reviews">Reviews</string>
    <string name="similar_products">Similar Products</string>
    <string name="cheese_slice">Cheese Slice 200 g</string>
    <string name="add_to_wish_list">Add to Favourite</string>
    <string name="my_cart">My Cart</string>
    <string name="dummy_cart">Cheedar Cream </string>
    <string name="items">Items</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="sub_total">Sub Total</string>
    <string name="order_charge">Order Delivery Charge</string>
    <string name="grand_total">Total Amount</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="messaging">Messaging</string>
    <string name="share_product">Share Product</string>
    <string name="check_out_this">Check this out</string>
    <string name="at">at</string>
    <string name="install_whatsapp">Please install WhatsApp application</string>
    <string name="install_twitter">Please install Twitter application</string>
    <string name="install_facebook">Please install Facebook application</string>
    <string name="setting">Settings</string>
    <string name="email">steavesmith0044@gmail.com</string>
    <string name="steve_smith">Steve Smith</string>
    <string name="wallet">Wallet</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_language">Change Language</string>
    <string name="notification">Notification</string>
    <string name="faq">FAQ</string>
    <string name="price_low_high">Price Low-High</string>
    <string name="price_high_low">Price High-Low</string>
    <string name="most_popular_products">Most popular Products</string>
    <string name="discounted_products">Discounted products</string>
    <string name="newly_added">Newly Added</string>
    <string name="choose_category">Choose Category</string>
    <string name="brand_name">Brand Name</string>
    <string name="price_range">Price Range</string>
    <string name="star_rating">Star Rating</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="contact_information">CONTACT INFORMATION</string>
    <string name="name">Name</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="building">Building</string>
    <string name="floor">Floor</string>
    <string name="street">Street</string>
    <string name="apartment_no">Apartment No</string>
    <string name="additional_directions">Additional Information</string>
    <string name="save">Save</string>
    <string name="set_delivery_address">Select Your Address</string>
    <string name="search_address">Search Address</string>
    <string name="done">Done</string>
    <string name="address_search_hint">Search Building Name / Villa Area</string>
    <string name="enter_address_or_move_pin">Please enter your address or move pin</string>
    <string name="set_delivery_location">Select Your Location</string>
    <string name="error_fetching_address">Problem fetching address, please try again.</string>
    <string name="location_service_disabled_title">Location Service Disabled</string>
    <string name="location_service_disabled_text">Please enable location service</string>
    <string name="enable">Enable</string>
    <string name="error_address_not_found">Address not found</string>
    <string name="added_to_wish_list">Added to Favourite</string>
    <string name="move_to_cart">Add To Cart</string>
    <string name="wishlist">Favourite</string>
    <string name="my_favorite">My Favourites</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear All</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="about_app">About App</string>
    <string name="my_profile">My Profile </string>
    <string name="mobile_number">Mobile Number</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="notify_me">Notify Me</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="total_price">Total Price</string>
    <string name="delivery_detail">Delivery Detail</string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_building">Please enter your building information</string>
    <string name="enter_floor">Please enter your floor information</string>
    <string name="enter_apartment_number">Please enter your apartment number</string>
    <string name="order_summary">Order Summary</string>
    <string name="add_detail">Add Details</string>
    <string name="choose_delivery_type">Choose Delivery Type</string>
    <string name="add_coupon">Coupon Code</string>
    <string name="add_loyalty_point">Loyalty Balance</string>
    <string name="choose_payment_detail">Choose Payment Details</string>
    <string name="cash">Cash on delivery</string>
    <string name="cc">Credit Card</string>
    <string name="total_item">Total Item</string>
    <string name="discount">Discount</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="deliver_now">Deliver Now</string>
    <string name="same_day_delivery">Same Day Delivery</string>
    <string name="next_day_delivery">Next Day Delivery</string>
    <string name="select_delivery_time">Select Delivery Time</string>
    <string name="set_delivery_time">Set Delivery Time</string>
    <string name="want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="choose_language">Choose your Preferred  Language</string>
    <string name="map">Map</string>
    <string name="how_it_work">How it works</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="app_version">App Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="filter">Filter</string>
    <string name="offers">Offers</string>
    <string name="expires">Expires on#</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="select_delivery_type">Please select your delivery type</string>
    <string name="loyalty_point">Loyalty Balance</string>
    <string name="not_finding_your_favourite_products">Not Finding Your Favourite Products?</string>
    <string name="type_in_each_product_you_need_and_we_ll_try_to_arrange_it_in_your_order">Type in each product not offered in our store and we will try to include it in the future.</string>
    <string name="enter_the_product_name">Enter the product name</string>
</resources>