<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/homeunselect"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@mipmap/offer"
        android:title="@string/discount" />
    <item
        android:id="@+id/navigation_my_order"
        android:icon="@mipmap/myordersunselect"
        android:title="@string/myorder" />
    <item
        android:id="@+id/navigation_request"
        android:icon="@mipmap/requestunselect"
        android:title="@string/request" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@mipmap/moreunselect"
        android:title="@string/more" />
    <!--<item-->
    <!--android:id="@+id/navigation_more"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:clickable="false"-->
    <!--android:title="@string/more"-->
    <!--app:actionLayout="@layout/action_bar_unread_icon"-->
    <!--app:showAsAction="always" />-->

</menu>
