<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/grey_1"
    tools:showIn="@layout/delivery_details_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/deliveryAddressTv"
            style="@style/BoldBlackText12Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableStart="@mipmap/address"
            android:padding="@dimen/_10sdp"
            android:text="Emirates Rd - Dubai - United Arab Emirates" />


        <android.support.v7.widget.AppCompatTextView
            style="@style/OrangeTextColorStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/contact_information" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstNameTextLayout"
            style="@style/LoginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/firstNameEditText"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="text"
                android:maxLength="20" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone_number"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:theme="@style/EditTextHint">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_phone_number"
                style="@style/BlackTextColorStyle_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            style="@style/OrangeTextColorStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/delivery_address" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_building"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextHint">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_building"
                style="@style/BlackTextColorStyle_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/building"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_floor"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextHint">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_floor"
                style="@style/BlackTextColorStyle_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/floor"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_apartment_no"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextHint">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_apartment_no"
                style="@style/BlackTextColorStyle_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apartment_no"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_street"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextHint">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_street"
                style="@style/BlackTextColorStyle_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_additional_restrictions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextHint">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_additional_restrictions"
                style="@style/BlackTextColorStyle_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/additional_directions"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/proceed_shop_back"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</ScrollView>