<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/app_toolbar" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:id="@+id/emailAddressTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextHint"

        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:maxLength="50" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/loyaltyPointTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextHint"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressTextLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loyaltyPointEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loyalty_point"
            android:inputType="number"
            android:maxLength="6" />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/transferLoyaltyPointBt"
        app:layout_constraintTop_toBottomOf="@+id/loyaltyPointTextLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:gravity="center"
        android:text="@string/save"
        style="@style/ButtonTextStyle"
        app:backgroundTint="@color/buttonOrangeColor"/>

    <include
        android:visibility="gone"
        android:id="@+id/progressBar"
        layout="@layout/progress_dialog_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp" />

</android.support.constraint.ConstraintLayout>